--- a/index.html
+++ b/index.html
@@ -11,11 +11,111 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
+    <!-- Link to font awsome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <!-- Link to personal style and script-->
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
   </head>
   <body>
-    <h1>hello</h1>
+    <!-- Jumbotron Screen -->
+    <div class="text-white bg-dark jumbotron">
+      <h1 class="text-center display-5">Weather Dashboard</h1>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <!-- Search Section -->
+        <div class="col-3" id="search-section">
+          <form>
+            <div class="form-group">
+              <label>Search for a City</label>
+
+              <div class="form-inline">
+                <input class="form-control w-50" id="city-search" />
+                <button type="button" class="btn btn-primary"><i class="fas fa-search"></i></button>
+              </div>
+            </div>
+          </form>
+          <ul class="list-group">
+            <li class="list-group-item">Cras justo odio</li>
+            <li class="list-group-item">Dapibus ac facilisis in</li>
+            <li class="list-group-item">Morbi leo risus</li>
+            <li class="list-group-item">Porta ac consectetur ac</li>
+            <li class="list-group-item">Vestibulum at eros</li>
+          </ul>
+        </div>
+        <!-- Weather Section -->
+
+        <div class="col-9">
+          <!-- Section for Current weather-->
+          <div class="row">
+            <div class="col py-3">
+              <div class="card">
+                <div class="card-body">
+                  <h1 class="card-title">city and time</h1>
+                  <p>Temperature</p>
+                  <p>Humidity</p>
+                  <p>Wind Speed</p>
+                  <p>UV index</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Section for 5 day forcast -->
+          <div class="row">
+            <div class="col">
+              <h1>5-Day Forcast</h1>
+              <div class="card-deck">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <i>Emote</i>
+                    <p>Temp</p>
+                    <p>Humidity</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <i>Emote</i>
+                    <p>Temp</p>
+                    <p>Humidity</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <i>Emote</i>
+                    <p>Temp</p>
+                    <p>Humidity</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <i>Emote</i>
+                    <p>Temp</p>
+                    <p>Humidity</p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <i>Emote</i>
+                    <p>Temp</p>
+                    <p>Humidity</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
