--- a/index.html
+++ b/index.html
@@ -42,11 +42,6 @@
             </div>
           </form>
           <ul class="list-group">
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Morbi leo risus</li>
-            <li class="list-group-item">Porta ac consectetur ac</li>
-            <li class="list-group-item">Vestibulum at eros</li>
           </ul>
         </div>
         <!-- Weather Section -->
@@ -57,7 +52,7 @@
             <div class="col py-3">
               <div class="card">
                 <div class="card-body">
-                  <h1 class="card-title" id="current-time-date">city and time</h1>
+                  <h1 class="card-title" id="current-time-date">City and Time</h1>
                   <p id= "current-temp">Temperature</p>
                   <p id= "current-humid">Humidity</p>
                   <p id= "current-wind">Wind Speed</p>
@@ -71,15 +66,6 @@
             <div class="col">
               <h1>5-Day Forcast</h1>
               <div class="card-deck">
-                <!-- <div class="card">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <i>Emote</i>
-                    <p>Temp</p>
-                    <p>Humidity</p>
-                  </div>
-                </div> -->
-    
               </div>
             </div>
           </div>
